Added Head and Title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
+   <head>
+    <title>
+        <h1>My first page of web using html.</h1>
+    </title>
+   </head> 
 <body>
-<h1>Mr Abdullah</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h2>Mr Abdullah</h2>
+<p>I'm hosted with GitHub Pages. 
+    My name is Abdullah. My father name is Abdul Rahim.
+</p>
 </body>
 </html>
