Added some Text

--- a/index.html
+++ b/index.html
@@ -2,13 +2,21 @@
 <html>
    <head>
     <title>
-        <h1>My first page of web using html.</h1>
+        Mr.Abdullah
     </title>
    </head> 
 <body>
-<h2>Mr Abdullah</h2>
-<p>I'm hosted with GitHub Pages. 
-    My name is Abdullah. My father name is Abdul Rahim.
+<h1>Mr.Abdullah Rahim</h1>
+<p>Dear Friends,<br> 
+    I am well pleased to tell you that this is my first html page. My little bit intro is : <br>  
+    My name is Abdullah. My father name is Abdul Rahim. I am an undergraduate student of Software Engineering at PAF-IAST University Mang, Haripur.
+    I am interested in programming.
 </p>
+<footer>
+    <h4>
+        HTML, CSS and JavaScript
+    </h4>
+    Abdullah Rahim 2023 All Rights are Reserved.
+</footer>
 </body>
 </html>
