Added some links

--- a/index2.html
+++ b/index2.html
@@ -6,9 +6,10 @@
     </title>
    </head> 
 <body>
-<section>Section 1
+    <a href="#myintro" title="My Introduction">About Abdullah</a>
+<section id="top"><h3>Section 1</h3>
     <article>
-        <h1 style="text-align: center; font-size: 25 px">Food</h1>
+        <h2 style="text-align: center; font-size: 25 px">Food</h2>
             <p>
                 <ol>
                     <li>Fruits
@@ -40,7 +41,7 @@
             </p>
     </article>
     <article>
-        <h1 style="text-align: center; font-size: 25 px">Animal</h1>
+        <h2 style="text-align: center; font-size: 25 px">Animal</h2>
 <p>
     <ol>
         <li>Lion</li>
@@ -50,8 +51,51 @@
 </p>
     </article>
 </section>
-
-
+<section><h3>Section 1</h3>
+    <article>
+        <h2 style="text-align: center; font-size: 25 px">Food</h2>
+            <p>
+                <ol>
+                    <li>Fruits
+                        <ol>
+                            <li><a href="https://www.nutrition-and-you.com/apple-fruit.html" 
+                                target="_blank" title="Apple Info">Apple</a></li>
+                            <li><a href="https://www.nutrition-and-you.com/orange-fruit.html" 
+                                target="_blank" title="Orange Info">Orange</a></li>
+                            <li><a href="https://www.thatsitfruit.com/blogs/default-blog/9-interesting-facts-about-pineapples"
+                                target="_blank" title="PineApple Info">Pine Apple</a></li>
+                            <li>WaterMelon</li>
+                        </ol>
+                    </li>
+                    <li>Vegetables
+                        <ol>
+                            <li>Onion</li>
+                            <li>Tomato</li>
+                            <li>Carrots</li>
+                        </ol>
+                    </li>
+                    <li>Protien Foods
+                        <ol>
+                            <li>Crab</li>
+                            <li>Beef</li>
+                            <li>Chicken</li>
+                        </ol>
+                    </li>
+                </ol>
+            </p>
+    </article>
+    <article>
+        <h2 style="text-align: center; font-size: 25 px">Animal</h2>
+<p>
+    <ol>
+        <li>Lion</li>
+        <li>Leopard</li>
+        <li>Elephant</li>
+    </ol>
+</p>
+    </article>
+</section>
+<section id="myintro">
 <h1 style="color: green; font-size: 30 px; text-align: center;">
     Mr.Abdullah Rahim</h1>
 <p style="color: rgba(240, 61, 6, 0.945); font-size: 16 px;">
@@ -65,10 +109,12 @@
     <h4>
         HTML, CSS and JavaScript
     </h4>
+    <a href="#top" title="Back to TOP">Go To TOP</a>
     <p style="color:black">
      Abdullah Rahim 2023 All Rights are Reserved._____________Email:</p>
      <p onclick= "alert('Emailing me is now useless');"> abdulhaseeb9274@gmail.com</p>
     
 </footer>
+</section>
 </body>
 </html>
