--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,7 @@
    </head> 
 <body>
     <a href="#myintro" title="My Introduction">About Abdullah</a>
+    
 <section id="top"><h3>Section 1</h3>
     <article>
         <h2 style="text-align: center; font-size: 25 px">Food</h2>
@@ -97,7 +98,7 @@
 </section>
 <section id="myintro">
 <h1 style="color: green; font-size: 30 px; text-align: center;">
-    Mr.Abdullah Rahim</h1>
+    <img src="me.jpeg" width="200" height="280"><br>Mr.Abdullah Rahim</h1>
 <p style="color: rgba(240, 61, 6, 0.945); font-size: 16 px;">
    Dear Friends,<br> 
    I am well pleased to tell you that this is my first html page. <br>
@@ -111,7 +112,8 @@
     </h4>
     <a href="#top" title="Back to TOP">Go To TOP</a>
     <p style="color:black">
-     Abdullah Rahim 2023 All Rights are Reserved._____________Email:</p>
+        <img src="me.jpeg" width="50" height="70">
+        Abdullah Rahim 2023 All &copy; Rights are Reserved._____________Email:</p>
      <p onclick= "alert('Emailing me is now useless');"> abdulhaseeb9274@gmail.com</p>
     
 </footer>
