--- a/Week 2/index5.html
+++ b/Week 2/index5.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="index5.css">
+        <title>Index-5</title>
+    </head>
+    <body>
+        <header>
+            <a href="/Week 2/index5.html">Home</a>
+            <a href="" target="_blank">Services</a>
+            <a href="" target="_blank">Testimonials</a>
+            <a href="" target="_blank">Contact</a>
+            <a href="" target="_blank">About us</a>      
+        </header>
+        
+        <footer>
+            <a>Abdullah Rahim 2023. All &copy; rights are Reserved.</a>
+            <a onclick="alert('Copy this email &quot; abdulhaseeb9274@gmail.com &quot; and mail me.')">Email: 
+                abdulhaseeb9274@gmail.com</a>
+        </footer>
+    </body>
 </html>
