--- a/indexAssHTML.html
+++ b/indexAssHTML.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Module-2-Solution/indexAssCSS.css">
+    <link rel="stylesheet" href="/indexAssCSS.css">
     <title>Module-2-Assignment</title>
 </head>
 <body>
