--- a/Module-2-Solution/indexAssHTML.html
+++ b/Module-2-Solution/indexAssHTML.html
@@ -11,16 +11,16 @@
     <h1>Our Menu</h1>
     <section class="col-md-4 col-tb-6">
         <span>Chicken</span>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut incidunt quas consequuntur ratione ullam in dicta nostrum, quam debitis delectus. Harum minus dolore eum hic recusandae blanditiis magni veritatis aliquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ducimus velit cumque! Enim veniam earum beatae impedit harum tempore repellendus perspiciatis. Ab, dignissimos quos eaque temporibus dolor sequi tempora suscipit?</p>
+        <p> <br> <br>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut incidunt quas consequuntur ratione ullam in dicta nostrum, quam debitis delectus. Harum minus dolore eum hic recusandae blanditiis magni veritatis aliquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ducimus velit cumque! Enim veniam earum beatae impedit harum tempore repellendus perspiciatis. Ab, dignissimos quos eaque temporibus dolor sequi tempora suscipit?</p>
             
     </section>
     <section class="col-md-4 col-tb-6">
         <span>Beef</span>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut incidunt quas consequuntur ratione ullam in dicta nostrum, quam debitis delectus. Harum minus dolore eum hic recusandae blanditiis magni veritatis aliquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ducimus velit cumque! Enim veniam earum beatae impedit harum tempore repellendus perspiciatis. Ab, dignissimos quos eaque temporibus dolor sequi tempora suscipit?</p>
+        <p> <br> <br>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut incidunt quas consequuntur ratione ullam in dicta nostrum, quam debitis delectus. Harum minus dolore eum hic recusandae blanditiis magni veritatis aliquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ducimus velit cumque! Enim veniam earum beatae impedit harum tempore repellendus perspiciatis. Ab, dignissimos quos eaque temporibus dolor sequi tempora suscipit?</p>
     </section>
     <section class="col-md-4 col-tb-12">
         <span>Sushi</span>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut incidunt quas consequuntur ratione ullam in dicta nostrum, quam debitis delectus. Harum minus dolore eum hic recusandae blanditiis magni veritatis aliquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ducimus velit cumque! Enim veniam earum beatae impedit harum tempore repellendus perspiciatis. Ab, dignissimos quos eaque temporibus dolor sequi tempora suscipit?</p>
+        <p> <br> <br>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut incidunt quas consequuntur ratione ullam in dicta nostrum, quam debitis delectus. Harum minus dolore eum hic recusandae blanditiis magni veritatis aliquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ducimus velit cumque! Enim veniam earum beatae impedit harum tempore repellendus perspiciatis. Ab, dignissimos quos eaque temporibus dolor sequi tempora suscipit?</p>
     </section>
 </body>
 </html>
